--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <style>
         body { font-family: 'Inter', sans-serif; }
         .discount-btn.active { background-color: #ef4444 !important; color: white !important; border-color: #ef4444 !important; }
+        
+        /* Control visual para el PDF */
         .print-only { display: none; }
         @media print {
             .no-print { display: none !important; }
@@ -81,32 +83,21 @@
             </div>
 
             <div class="grid grid-cols-1 md:grid-cols-4 gap-4 pt-2">
-                <div>
-                    <label class="text-[10px] font-bold text-blue-400 uppercase">Precio Motor $</label>
-                    <input type="number" id="motor-precio" placeholder="0.00" class="w-full p-2.5 bg-white border border-blue-200 rounded-xl font-bold text-sm">
+                <input type="number" id="motor-precio" placeholder="Precio Motor $" class="p-2.5 bg-white border border-blue-200 rounded-xl font-bold text-sm">
+                <div class="flex gap-1">
+                    <input type="text" id="extra-nombre" placeholder="Extra" class="w-2/3 p-2.5 border border-blue-200 rounded-xl text-xs">
+                    <input type="number" id="extra-precio" placeholder="$" class="w-1/3 p-2.5 border border-blue-200 rounded-xl text-xs">
                 </div>
-                <div>
-                    <label class="text-[10px] font-bold text-blue-400 uppercase">Extra (Nombre y $)</label>
-                    <div class="flex gap-1">
-                        <input type="text" id="extra-nombre" placeholder="Puntas" class="w-2/3 p-2.5 border border-blue-200 rounded-xl text-xs">
-                        <input type="number" id="extra-precio" placeholder="$" class="w-1/3 p-2.5 border border-blue-200 rounded-xl text-xs">
-                    </div>
-                </div>
-                <div class="flex flex-col justify-end">
-                    <label class="flex items-center gap-2 cursor-pointer bg-white p-2.5 rounded-xl border border-blue-200 h-[42px]">
-                        <input type="checkbox" id="facia-toggle" class="w-4 h-4">
-                        <span class="text-[9px] font-black uppercase">Facia Aluminio</span>
-                    </label>
-                </div>
-                <div>
-                    <label class="text-[10px] font-bold text-blue-400 uppercase">Indicaciones</label>
-                    <input type="text" id="indicaciones" placeholder="Detalles..." class="w-full p-2.5 bg-white border border-blue-200 rounded-xl text-xs">
-                </div>
+                <label class="flex items-center gap-2 cursor-pointer bg-white p-2.5 rounded-xl border border-blue-200 h-[42px]">
+                    <input type="checkbox" id="facia-toggle" class="w-4 h-4">
+                    <span class="text-[9px] font-black uppercase">Facia Aluminio</span>
+                </label>
+                <input type="text" id="indicaciones" placeholder="Indicaciones..." class="w-full p-2.5 bg-white border border-blue-200 rounded-xl text-xs">
             </div>
             <button onclick="agregar()" class="w-full bg-slate-900 text-white font-black rounded-xl hover:bg-blue-600 transition-all uppercase text-sm h-12">Añadir a Cotización</button>
         </div>
 
-        <div class="overflow-hidden border border-slate-200 rounded-2xl">
+        <div id="seccion-tabla" class="overflow-hidden border border-slate-200 rounded-2xl">
             <table class="w-full text-left">
                 <thead class="bg-slate-800 text-white text-[10px] uppercase tracking-widest">
                     <tr>
@@ -121,25 +112,25 @@
             </table>
         </div>
 
-        <div class="pt-6 border-t border-slate-200">
+        <div id="seccion-totales" class="pt-6 border-t border-slate-200">
             <div class="flex flex-col md:flex-row justify-between items-start gap-8">
-                <div id="seccion-descuentos-inst" class="w-full md:w-1/2 space-y-4 no-print">
+                <div id="controles-finales" class="w-full md:w-1/2 space-y-4 no-print">
                     <div>
-                        <label class="text-[10px] text-slate-400 font-bold uppercase block mb-2">Aplicar Descuento</label>
+                        <label class="text-[10px] text-slate-400 font-bold uppercase block mb-2">Descuento</label>
                         <div class="flex gap-2">
                             <button onclick="setDiscount(10)" id="btn-10" class="discount-btn px-4 py-2 border border-slate-300 rounded-xl text-xs font-bold transition-all">10%</button>
                             <button onclick="setDiscount(15)" id="btn-15" class="discount-btn px-4 py-2 border border-slate-300 rounded-xl text-xs font-bold transition-all">15%</button>
                             <button onclick="setDiscount(20)" id="btn-20" class="discount-btn px-4 py-2 border border-slate-300 rounded-xl text-xs font-bold transition-all">20%</button>
-                            <button onclick="setDiscount(0)" class="px-4 py-2 bg-slate-100 rounded-xl text-[10px] uppercase font-bold">0%</button>
+                            <button onclick="setDiscount(0)" class="px-4 py-2 bg-slate-100 rounded-xl text-[10px] uppercase font-bold">Limpiar</button>
                         </div>
                     </div>
                     <div>
-                        <label class="text-[10px] text-slate-400 font-bold uppercase block mb-1">Costo Instalación ($)</label>
+                        <label class="text-[10px] text-slate-400 font-bold uppercase block mb-1">Instalación ($)</label>
                         <input type="number" id="inst" value="0" oninput="render()" class="w-full p-2 bg-slate-50 border border-slate-200 rounded-lg font-bold">
                     </div>
                 </div>
 
-                <div class="w-full md:w-72 space-y-2 text-right">
+                <div class="w-full md:w-72 space-y-2 text-right ml-auto">
                     <div class="flex justify-between text-slate-400 text-xs font-bold uppercase">
                         <span>Subtotal:</span> <span id="val-subtotal">$0.00</span>
                     </div>
@@ -221,10 +212,6 @@ function agregar() {
         indic: document.getElementById('indicaciones').value
     });
     render();
-    // Limpiar campos de extras después de agregar
-    document.getElementById('motor-precio').value = "";
-    document.getElementById('extra-precio').value = "";
-    document.getElementById('indicaciones').value = "";
 }
 
 function setDiscount(val) {
@@ -270,27 +257,43 @@ function render() {
 }
 
 async function generarPDF() {
+    // 1. Preparar datos de cliente para el PDF
     document.getElementById('pdf-cliente').innerText = document.getElementById('cliente').value || "---";
     document.getElementById('pdf-tel').innerText = document.getElementById('tel-cliente').value || "---";
 
-    const element = document.getElementById('cotizacion-completa');
-    const clone = element.cloneNode(true);
+    // 2. Clonar el elemento completo
+    const original = document.getElementById('cotizacion-completa');
+    const clone = original.cloneNode(true);
 
-    // Eliminación estricta de controles para el PDF resultante
-    const selectors = ['#panel-controles', '#seccion-descuentos-inst', '#botones-accion', '#col-borrar', '.no-print', '.delete-cell', 'button', 'select'];
-    selectors.forEach(sel => {
-        clone.querySelectorAll(sel).forEach(n => n.remove());
+    // 3. ELIMINAR SOLO LO INNECESARIO (Botones y Selectores)
+    // Esto garantiza que la tabla y los totales se mantengan
+    const borrar = [
+        '#panel-controles', 
+        '#controles-finales', 
+        '#botones-accion', 
+        '#col-borrar', 
+        '.no-print', 
+        '.delete-cell', 
+        'button', 
+        'select', 
+        'input'
+    ];
+    
+    borrar.forEach(sel => {
+        clone.querySelectorAll(sel).forEach(el => el.remove());
     });
 
     const opt = {
-        margin: 0.4,
-        filename: `Cotizacion_${document.getElementById('cliente').value || 'Cliente'}.pdf`,
+        margin: 0.5,
+        filename: `Cotizacion_Shadows_${document.getElementById('cliente').value || 'Cliente'}.pdf`,
         image: { type: 'jpeg', quality: 0.98 },
         html2canvas: { scale: 3, useCORS: true },
         jsPDF: { unit: 'in', format: 'letter', orientation: 'portrait' }
     };
 
     html2pdf().set(opt).from(clone).save();
+
+    // Actualizar folio
     folioActual++;
     localStorage.setItem('folio_shadows', folioActual);
     document.getElementById('folio-display').innerText = '#' + String(folioActual).padStart(3, '0');
